1st try to fix bug on mobile browsers receiving no click event

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,6 +83,7 @@ section {
     position: fixed;
     bottom: 1em;
     right: 1em;
+    text-decoration: none;
 }
 
 .next:hover {
